--- a/css/Form.css
+++ b/css/Form.css
@@ -43,6 +43,7 @@ body{
 *{
     box-sizing: border-box;
 }
+
 .form-content{
     min-height: calc(100%-80px);
     background-color: #f7f7f7;
@@ -101,4 +102,21 @@ label{
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+}
+
+.profile-radio-content{
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-radio-content > label{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.profile{
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 12px;
 }
