--- a/css/Form.css
+++ b/css/Form.css
@@ -157,11 +157,29 @@ label{
 
 .submitButton{
     margin-right: 30px;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
+    
 }
 
 .cancelButton{
     text-decoration: none;
     text-align: center;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
+    
+}
+
+.resetButton{
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
+    
 }
 
 @media only screen and (max-width: 960px){
