--- a/css/Form.css
+++ b/css/Form.css
@@ -182,6 +182,12 @@ label{
     
 }
 
+error-output{
+    font-size: 12px;
+    font-style: italic;
+    color: red;
+}
+
 @media only screen and (max-width: 960px){
     .cancelButton{
         margin-left: 0px;
